# simple-migrations

./: README.md  pyproject.toml  simple_migrations.ini
simple_migrations/: cli.py  config.py  initial_setup.py  migrate.py  migration_template.py  setup.py  validate.py
