[tool.poetry]
name = "simple-migrations"
version = "0.3.0"
description = ""
authors = ["Pavel Bitiukov <pavleg.bityukov@gmail.com>"]
readme = "README.md"
repository = "https://github.com/bp72/simple-migrations"

[tool.poetry.dependencies]
python = "^3.11"
psycopg = "^3.1"
configparser = "^6.0"

[tool.poetry.scripts]
simple-migrations = "simple_migrations.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
